# seq

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitmodules  .merlin  .natvis  .travis.yml  CMakeLists.txt  CNAME  CODEOWNERS  CONTRIBUTING.md  Makefile  NEW  NEW.ll  README.md  _tags  _w  bintray.json  build.html  build.md  cookbook.html  deps.sh  docgen.py  embed.html  example.py  find-python-library.py  genindex.html  index.html  install.sh  intro.html  myocamlbuild.ml  objects.inv  parallel.html  py-modindex.html  python.html  scratch.seq  scratchlib.seq  search.html  searchindex.js  (+5 more)
.github/workflows/: ci.yml
_sources/stdlib/: bisect.rst.txt  collections.rst.txt  functools.rst.txt  getopt.rst.txt  gzip.rst.txt  heapq.rst.txt  index.rst.txt  itertools.rst.txt  math.rst.txt  openmp.rst.txt  operator.rst.txt  pickle.rst.txt  python.rst.txt  random.rst.txt  sortedlist.rst.txt  statistics.rst.txt  string.rst.txt  sys.rst.txt  threading.rst.txt  time.rst.txt
clib/: Makefile  caml.cc  libmain.clib  main.cc
cmake/: PEGTL.txt.in
compiler/dsl/: dsl.h  plugins.cpp  plugins.h
compiler/format2/: expr.cc  pattern.cc  stmt.cc
compiler/lang/: expr.cpp  expr.h  func.cpp  func.h  lang.cpp  lang.h  ops.cpp  ops.h  patterns.cpp  patterns.h  pipeline.cpp  pipeline.h  seq.cpp  seq.h  stmt.cpp  stmt.h  var.cpp  var.h
compiler/parser/: ast.h  cache.cpp  cache.h  codegen_expr.cc  codegen_stmt.cc  common.cc  common.cpp  common.h  context.cc  context.cpp  context.h  ctx.h  expr.cc  ocaml.cc  ocaml.cpp  ocaml.h  parser.cc  parser.cpp  parser.h  pattern.cc  peg.cpp  peg.h  stmt.cc  test.cc  transform_expr.cc  transform_stmt.cc
compiler/parser/ocaml/: Makefile  ast.ml  dune  grammar.messages  grammar.ml  grammar.mly  lexer.ml  lexer.mll  main.ml  ocaml.cpp  ocaml.h  seqgrammar.messages  seqgrammar.mly
compiler/parser/ocaml/_build/: .db  .digest-db  .to-delete-in-source-tree  log
compiler/parser/ocaml/_build/default/: grammar.ml  grammar.mli  grammar__mock.ml.mock  lexer.ml
compiler/parser/ocaml/_build/default/.dune/: configurator
compiler/parser/ocaml/_build/default/.main.eobjs/: grammar.intf.all-deps  grammar.ml.d  lexer.impl.all-deps
compiler/parser/ocaml/_build/default/.main.eobjs/byte/: grammar.cmti
compiler/parser/ocaml/_build/default/.main.eobjs/native/: ast.cmx  grammar.cmx  grammar_messages.cmx
compiler/seq/: pipeline.cpp  pipeline.h  revcomp.cpp  revcomp.h  seq.cpp
compiler/sequre/: arithmetics.cpp  arithmetics.h  sequre.cpp  sequre.h
compiler/sir/: attribute.cpp  attribute.h  base.cpp  base.h  const.h  constant.cpp  constant.h  flow.cpp  flow.h  func.cpp  func.h  instr.cpp  instr.h  lvalue.cpp  lvalue.h  module.cpp  module.h  operand.cpp  operand.h  rvalue.cpp  rvalue.h  sir.h  value.cpp  value.h  var.cpp  (+1 more)
docs/: conf.py  index.rst  internals.rst  intro.rst
include/: array.h  basestage.h  call.h  chunk.h  collect.h  common.h  copy.h  count.h  exc.h  filter.h  foreach.h  func.h  hash.h  io.h  lambda.h  len.h  mem.h  num.h  op.h  pipeline.h  print.h  range.h  revcomp.h  seq.h  seqt.h  serialize.h  split.h  stage.h  stageutil.h  substr.h  types.h  util.h  var.h  void.h
jupyter/: .gitignore  README.md  pyproject.toml  setup.py  wrapper.py
jupyter/seq_kernel/: install.py  kernel.js  kernel.json  kernel.py  redirector.py  wrapper.py
ocaml/: .merlin  .ocamlinit  Makefile  README.md  _tags  code.cpp  dune-project  lib.seq  myocamlbuild.ml  notes.md
ocaml/src/: ast.ml  ctx.ml  dune  err.ml  expr.ml  intf.ml  lexer.mll  llvm.ml  main.ml  parser.mly  seqtypes.ml  stmt.ml  util.ml
parser/: .ocamlformat  Makefile  README.md  ast.ml  ctx.ml  dune  dune-project  err.ml  expr.ml  grammar.mly  intf.mli  jit.ml  jupyter.ml  kernel_info.json  lexer.mll  llvm.ml  main.ml  notes.md  parser.ml  parser.mly  pass.ml  run_mpc.sh  runner.ml  stmt.ml  util.ml
parser/parser/: ast.ml  ctx.ml  dune  err.ml  expr.ml  generator.ml  grammar.mly  intf.mli  lexer.mll  llvm.ml  parser.ml  stmt.ml
parser/seqaml/: ast.ml  ast_ann.ml  ast_expr.ml  ast_stmt.ml  codegen.ml  codegen_ctx.ml  codegen_expr.ml  codegen_intf.mli  codegen_stmt.ml  ctx.ml  ctx_namespace.ml  dune  err.ml  grammar.mly  lexer.mll  llvm.ml  parser.ml  typecheck_ctx.ml  typecheck_expr.ml  typecheck_infer.ml  typecheck_intf.mli  typecheck_realize.ml  typecheck_stmt.ml  util.ml
runtime/: align.cpp  exc.cpp  lib.cpp  lib.h  main.cpp  pybridge.cpp
scratch/: test.seq
scripts/: deps.cmake  deps.sh  htslib-config.h.cmake  install.sh
seq/: CMakeLists.txt  plugin.toml  seq.cpp  seq.h
seq-vscode/: README.md  package.json
seq/ir/: pipeline.cpp  pipeline.h  revcomp.cpp  revcomp.h  seq.cpp  seq.h
seq/stdlib/bio/: __init__.codon  align.codon  bed.codon  block.codon  builtin.codon  fai.codon  fasta.codon  fastq.codon  kmer.codon  locus.codon  prefetch.codon  pseq.codon  seq.codon  vcf.codon
seq/sw/: intersw.cpp
seq/test/: main.cpp
seq/test/core/: containers.codon  formats.codon  kmers.codon  match.codon  proteins.codon  serialization.codon
src/: ast.ml  cell.cpp  codegen.ml  exc.cpp  exc.h  foreign.cpp  func.cpp  init.ml  io.cpp  io.h  lexer.mll  lib.c  llvm.h  main.ml  mem.cpp  ops.cpp  parser.mly  patterns.cpp  pipeline.cpp  scratch.ml  seq.cpp  seq.h  seqdata.h  seqgc.cpp  seqtypes.ml  types.cpp  types.h  types.ml  util.cpp  util.h  utils.ml  var.cpp
stdlib/: C.seq  __root__.seq  algorithms.seq  bio.seq  bisect.html  bisect.seq  c.seq  collections.html  collections.seq  dict.seq  dll.seq  err.seq  file.seq  functools.html  functools.seq  gc.seq  getopt.html  getopt.seq  gzip.html  gzip.seq  heapq.html  heapq.seq  index.html  itertools.html  itertools.seq  jupyter.seq  list.seq  math.html  math.seq  ntl.seq  openmp.html  openmp.seq  operator.html  operator.seq  os.seq  pdqsort.seq  pickle.html  pickle.seq  python.html  python.seq  (+22 more)
test/: main.cpp  scratch.seq  seqs.txt  sir.cpp  test.cpp  test.seq  testhelp.h  types.cpp
test_stdlib/: test_bisect.seq  test_itertools.seq  test_math.seq  test_random.seq  test_str.seq
tutorial/: index.html  primer.html  setup.html  tutorial.html  workshop.html
(+994 files in other folders)
