[build-system]
requires = ["flit", "ipykernel"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "seq_kernel"
author = ""
author-email = ""
home-page = "https://github.com/seq-lang/seq"
description-file = "README.md"

[tool.flit.entrypoints."pygments.lexers"]
seq = "seq_kernel.seqlex:SeqLexer"