(env
   (dev (flags (:standard -w @a-4-29-40-41-42-44-45-48-58-59-60-40-26-27 -warn-error -A))))

(executable
   (name main)
   (libraries
      base core ctypes ctypes.foreign ctypes.stubs
      seqaml)
   (modes (native object))
   (link_flags (:standard -noautolink -runtime-variant _pic))
   (preprocess (pps ppx_sexp_conv ppx_deriving.show)))
