(env
   (dev (flags (:standard -w @a-4-29-40-41-42-44-45-48-58-59-60-40-26-27 -warn-error -A))))

(executable
   (name main)
   (libraries
      base core ctypes ctypes.foreign ctypes.stubs ANSITerminal
      seqaml)
   (modes (native object) (native exe))
   ; (link_flags (:standard -noautolink -runtime-variant _pic))
   (link_flags (:standard -I ../../../build -ccopt -lseq))
   (preprocess (pps ppx_sexp_conv ppx_deriving.show)))
